# rust-wasm-game

./: Cargo.toml  README.md  package-lock.json  package.json  server.js  webpack.config.js
js/: bootstrap.js  index.html  index.js  main.js
shaders/: bufferCopy.frag  bufferCopy.vert  triangle.frag  triangle.vert
src/: game.rs  lib.rs  renderer.rs
